<resources>
    <string name="app_name">FaceDX</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_settings">Settings</string>
    <string name="jenis_kulit">Jenis Kulit Wajah</string>
    <string name="logo_desc">Logo Aplikasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="back">Back</string>
    <string name="back_button">Back Button</string>
    <string name="kulit_minyak">Kulit Berminyak</string>
    <string name="image">Image</string>
    <string name="next">Next</string>
    <string name="back_to_home">Back to Home</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="preview_image">preview_image</string>
    <string name="background_image">Background Image</string>
    <string name="onboarding_1">Discover the Stories of the Past!</string>
    <string name="onboarding_2">Scan Artifacts\nand Historical Treasures!</string>
    <string name="onboarding_3">Book Your\nTicket to Temples!</string>
    <string name="login">MASUK DAN CEK KULIT WAJAH ANDA</string>
    <string name="no_history">Tidak Ada History</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="uncreated_register">Fitur ini masih belum tersedia.\nKembali ke halaman Login?</string>

    <string name="splashtext1">Adalah tempat untuk mengetahui tipe kulit yang anda miliki mulai dari tipe yang berminyak, normal, hingga kulit wajah yang kering</string>
    <string name="splashtext2">Dengan mengetahui tipe kulit anda, anda dapat mengetahui perawatan apa yang cocok sehingga hasil yang di berikan akan maksimal</string>
    <string name="splashtext3">dan juga dapat menghindari produk yang tidak sesuai dengan tipe wajah anda</string>
    <string name="splashtext4">Tempat untuk para user yang ingin menjadi glow up</string>
    <string name="homedesc">Mari Sehatkan kulit wajah anda dengan mulai dari mengetahui jenis kulit wajah yang anda miliki</string>
    <string name="history_date">02-05-2025</string>
    <string name="history_perawatan">Perawatan untuk Kulit Berminyak adalah....</string>
    <string name="kenali_kulitmu">Kenali Kulitmu</string>
    <string name="guide_camera">Ambil atau unggah gambar untuk menentukan tipe kulitmu</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="unggah_foto">Unggah Foto</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="cek_sekarang">Cek Sekarang</string>
    <string name="kembali">Kembali</string>
    <string name="berhasil_dicek_dengan_hasil">Berhasil Dicek Dengan Hasil</string>
    <string name="berminyak">BERMINYAK</string>
    <string name="result_desc">Tipe kulit wajah anda adalah kulit yang Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam....</string>
    <string name="rekomendasi_perawatan">Rekomendasi Perawatan</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem Ipsum Dolor Sit Amet</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam....</string>
    <string name="caranya">Caranya</string>
    <string name="riwayat">Riwayat</string>
    <string name="simpan">Simpan</string>
    <string name="buang">Buang</string>
    <string name="lorem_ipsum_super_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pulvinar quam ut tortor lacinia facilisis. In sodales vulputate justo, a efficitur dolor dignissim sed. Donec venenatis, lectus ac ullamcorper consequat, risus est laoreet nibh, sed pharetra metus magna facilisis lacus. Nullam in venenatis justo. Praesent enim lorem, laoreet ut sapien sit amet, accumsan euismod mauris. In porta, neque in tincidunt varius, justo nulla feugiat nisl, in condimentum mi justo in augue. Ut hendrerit, lacus non placerat placerat, nisi mi consectetur augue, eget vehicula turpis augue quis elit.\n\nProin id egestas diam, nec vehicula est. Morbi in dui scelerisque velit ultrices facilisis. Maecenas varius mi nisl. Aenean nec erat non ligula condimentum venenatis bibendum ac nisi. Phasellus eu dui sit amet est vestibulum pharetra. Integer posuere dui vitae sapien malesuada, et mollis ex tempor. Donec quis mauris eget lorem congue blandit et ut quam. Ut justo mi, placerat quis vehicula ac, eleifend bibendum diam. Maecenas ut lectus diam. </string>
    <string name="delete_all_history">Hapus Semua History Pengecekan wajah</string>
    <string name="about_us">Tentang Kami</string>
    <string name="about_app">Tentang App</string>
    <string name="faq">FAQ</string>
    <string name="hapus_semua_history">Hapus Semua History</string>
    <string name="berhasil_dihapus">Berhasil Dihapus</string>
    <string name="hallo">Hallo...</string>
    <string name="desc_chatbot">Saya AyuBot, AI khusus untuk perawatan kulit Anda. Siap membantu Anda memahami kulit wajah Anda lebih dalam dan menemukan solusi terbaik.</string>
    <string name="start_chatbot">Yuk, mulai analisisnya!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="kirim">Kirim</string>
    <string name="ketik_keluhan_anda_disini">Ketik Keluhan Anda Di sini</string>
    <string name="ayubot">AyuBot</string>
    <string name="send">Send</string>
    <string name="user">User</string>
    <string name="preview">Preview</string>
    <string name="error_crop_image">Gambar yang dicrop kurang sesuai</string>
    <string name="cancel_crop_image">Batal memotong gambar</string>
    <string name="result">Result</string>
    <string name="saran">Saran</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="about">Deleted</string>
    <string name="chatbot">Chatbot</string>


</resources>