<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.facedx.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_saranFragment"
            app:destination="@id/navigation_saran" />
        <action
            android:id="@+id/action_homeFragment_to_resultFragment"
            app:destination="@id/navigation_result" />
    </fragment>


    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.facedx.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_cameraFragment_to_previewFragment"
            app:destination="@id/navigation_preview" />
    </fragment>

    <fragment
        android:id="@+id/navigation_preview"
        android:label="@string/preview"
        android:name="com.example.facedx.ui.camera.PreviewFragment"
        tools:layout="@layout/fragment_preview" >
        <action
            android:id="@+id/action_previewFragment_to_resultFragment"
            app:destination="@id/navigation_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.facedx.ui.camera.ResultFragment"
        android:label="@string/result"
        tools:layout="@layout/fragment_result" >
        <action
            android:id="@+id/action_resultFragment_to_saranFragment"
            app:destination="@id/navigation_saran" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saran"
        android:name="com.example.facedx.ui.home.SaranFragment"
        android:label="@string/saran"
        tools:layout="@layout/fragment_saran" >
        <action
            android:id="@+id/action_saranFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_saranFragment_to_cameraFragment"
            app:destination="@id/navigation_camera" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.facedx.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_deleteFragment"
            app:destination="@id/navigation_delete" />
        <action
            android:id="@+id/action_settingsFragment_to_aboutFragment"
            app:destination="@id/navigation_about" />
        <action
            android:id="@+id/action_settingsFragment_to_faqFragment"
            app:destination="@id/navigation_faq" />
    </fragment>

    <fragment
        android:id="@+id/navigation_delete"
        android:name="com.example.facedx.ui.settings.DeleteFragment"
        android:label="@string/delete"
        tools:layout="@layout/fragment_delete" >
        <action
            android:id="@+id/action_deleteFragment_to_deletedFragment"
            app:destination="@id/navigation_deleted" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.facedx.ui.settings.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.example.facedx.ui.settings.FaqFragment"
        android:label="@string/faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/navigation_deleted"
        android:name="com.example.facedx.ui.settings.DeletedFragment"
        android:label="@string/deleted"
        tools:layout="@layout/fragment_deleted" />

    <fragment
        android:id="@+id/navigation_chatbot"
        android:name="com.example.facedx.ui.chatbot.ChatbotFragment"
        android:label="@string/chatbot"
        tools:layout="@layout/fragment_chatbot" />


</navigation>