<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0FBDBE"
    android:layout_marginBottom="70dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/top_image"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:background="#0FBDBE">

            <ImageView
                android:id="@+id/imageDokter"
                android:layout_width="334dp"
                android:layout_height="374dp"
                android:contentDescription="@string/image"
                android:paddingTop="35dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/doctor"
                android:scaleType="centerCrop" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardResult"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardCornerRadius="24dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/top_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E7F0F0"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/judul_saran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_dolor_sit_amet"
                android:textColor="#086A6B"
                android:fontFamily="@font/poppins_bold"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/deskripsi_saran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/lorem_ipsum_long"
                android:textColor="#086A6B"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/judulCara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/caranya"
                android:textColor="#086A6B"
                android:textSize="22sp"
                android:fontFamily="@font/poppins_bold"/>

            <TextView
                android:id="@+id/isiCara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lorem_ipsum_super_long"
                android:textColor="#086A6B"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRiwayat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:text="@string/riwayat"
                    android:textColor="#086A6B"
                    android:fontFamily="@font/poppins_semibold"
                    android:background="@drawable/bg_btn_white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnKembali"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kembali"
                    android:textColor="#086A6B"
                    android:fontFamily="@font/poppins_semibold"
                    android:background="@drawable/bg_btn_white" />
            </LinearLayout>


        </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
