<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rounded"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_marginBottom="70dp"
    android:elevation="8dp">

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="87dp"
        android:layout_height="100dp"
        android:contentDescription="@string/delete_all_history"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_delete"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_dialog_rounded"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btConfirmDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_yellow"
        android:text="@string/hapus_semua_history"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="12sp"
        android:textColor="#FFFFFF" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_btn_red"
        android:text="@string/kembali"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="12sp"
        android:textColor="#FFFFFF" />
</LinearLayout>
