<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="370dp"
        android:layout_height="352dp"
        android:contentDescription="@string/onboarding_2"
        android:scaleType="centerCrop"
        android:src="@drawable/splash1"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"
        android:layout_margin="16dp"
        android:paddingHorizontal="14dp"
        app:layout_constraintTop_toBottomOf="@id/backgroundImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splashtext1"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/acme_regular"
        android:paddingBottom="60dp"
        android:paddingHorizontal="14dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
