<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="109dp"
            android:layout_height="104dp">

            <ImageView
                android:id="@+id/card_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/history"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />
        </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/title_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kulit_minyak"
                android:fontFamily="@font/poppins_bold"
                android:textColor="#086A6B"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/card_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_date"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="#086A6B"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/card_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_perawatan"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="#086A6B"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
